@@ -10,6 +10,7 @@ USER_FEEDBACK_ENV_VAR = 'GETSENTRY_USER_FEEDBACK'
 IGNORED_JS = 'GETSENTRY_JS_TO_IGNORE'
 IGNORED_JS_ERRORS = 'GETSENTRY_JS_ERRORS_TO_IGNORE'
 ALLOWED_JS = 'GETSENTRY_JS_TO_ALLOW'
+CA_CERTS_ENV_VAR = 'GETSENTRY_CA_CERTS'
 
 
 IS_PLONE_4 = api.env.plone_version().startswith("4")
