@@ -1,4 +1,5 @@
 from celery.utils.log import get_task_logger
+from collective.sentry.config import CA_CERTS_ENV_VAR
 from collective.sentry.config import ENVIRONMENT_ENV_VAR
 from collective.sentry.config import RELEASE_ENV_VAR
 from sentry_sdk.integrations.celery import CeleryIntegration
@@ -9,6 +10,7 @@ logger = get_task_logger(__name__)
 
 environment = os.environ.get(ENVIRONMENT_ENV_VAR, None)
 release = os.environ.get(RELEASE_ENV_VAR, '')
+ca_certs = os.environ.get(CA_CERTS_ENV_VAR, None)
 
 
 def extra_config(startup):
@@ -19,5 +21,6 @@ def extra_config(startup):
             integrations=[CeleryIntegration()],
             environment=environment,
             release=release,
+            ca_certs=ca_certs,
         )
         logger.warn("Initialized Sentry with celery integration.")
